feat(github): re-organize interactions with github APIs
